--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     </properties>
 
     <dependencies>
-      <!--  <dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.4</version>
@@ -36,7 +36,7 @@
             <artifactId>servlet-api</artifactId>
             <version>2.4</version>
             <scope>provided</scope>
-        </dependency>-->
+        </dependency>
     </dependencies>
 
     <build>
@@ -44,27 +44,14 @@
         <outputDirectory>target/classes</outputDirectory>
         <finalName>${project.artifactId}-${project.version}</finalName>
         <testOutputDirectory>target/test-classes</testOutputDirectory>
-        <sourceDirectory>../src</sourceDirectory>
-        <scriptSourceDirectory>../src</scriptSourceDirectory>
-        <testSourceDirectory>../src</testSourceDirectory>
-        <testResources>
-            <testResource>
-                <directory>test</directory>
-            </testResource>
-        </testResources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>3.0</version>
                 <configuration>
-                    <source>$(jdk)</source>
-                    <target>$(jdk)</target>
-                    <compilerVersion>$(jdk)</compilerVersion>
-                    <optimize>true</optimize>
-                    <verbose>true</verbose>
-                    <debug>true</debug>
-                    <fork>true</fork>
+                    <source>${jdk}</source>
+                    <target>${jdk}</target>
                 </configuration>
             </plugin>
             <plugin>
